linked up footer and font fixes on mobile

--- a/source/stylesheets/_queries.scss
+++ b/source/stylesheets/_queries.scss
@@ -9,8 +9,11 @@
 
     /* Custom, iPhone Retina */ 
     @media only screen and (min-width : 320px) {
+        h2{
+            font-size: 20px;
+        }
         .line-breaker-1{
-            display: block;
+            display: block;            
         }  
         .line-breaker-2{
             display: block;
@@ -19,6 +22,9 @@
 
     /* Extra Small Devices, Phones */ 
     @media only screen and (min-width : 480px) {
+        h2{
+            font-size: 30px;
+        }
         .line-breaker-1{
             display: block;
         }  
